--- a/templates/base.html
+++ b/templates/base.html
@@ -14,16 +14,17 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    
+    <!--Own css-->
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
     
     
     <title>Task Manager</title>
 </head>
 <body>
-    
-     <h1>Outside!</h1>
+    <div class="container">
         {% block content %}
         {% endblock %}
+    </div>
     
     <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
@@ -31,7 +32,18 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $('.collapsible').collapsible();
+            $('select').material_select();
         })
+        
+        $('.datepicker').pickadate({
+            selectMonths: true, // Creates a dropdown to control month
+            selectYears: 15, // Creates a dropdown of 15 years to control year,
+            today: 'Today',
+            clear: 'Clear',
+            close: 'Ok',
+            closeOnSelect: false // Close upon selecting a date,
+        });
+        
     </script>
     
 </body>
