--- a/templates/categories.html
+++ b/templates/categories.html
@@ -9,8 +9,8 @@
         <li>
             <div class="collapsible-header">
                 <div class="col 3">
-                <a href="" class="waves-effect waves-light btn btn_small">Del</a>
-                <a href="" class="waves-effect waves-light btn btn_small blue">Edit</a>
+                <a href="{{url_for('delete_category', category_id=category._id)}}" class="waves-effect waves-light btn btn_small">Del</a>
+                <a href="{{url_for('edit_category', category_id=category._id)}}" class="waves-effect waves-light btn btn_small blue">Edit</a>
                 </div>
                 <div class="task_header col s9">
                     <strong>{{category.category_name}}</strong>
@@ -20,5 +20,10 @@
         {% endfor %}
 
     </ul>
+</div>
+<div class="row">
+    <a href="{{url_for('add_category')}}" class="waves-effect waves-light btn">
+        <i class="material-icons right">playlist_add</i>Add Category
+    </a>
 </div>
 {% endblock %}
